front.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-front
    labels:
        app: app-front
spec:
    replicas: 1
    selector:
        matchLabels:
            app: front
    template:
        metadata:
            labels:
                app: front
        spec:
          containers:
          - image:  kubi-front
            name:  front
            imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  selector:
    app: front
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
