front.yml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app-front
    labels:
        app: app-front
spec:
    replicas: 1
    selector:
        matchLabels:
            app: front
    template:
        metadata:
            labels:
                app: front
        spec:
          containers:
          - name: front
            image: ghcr.io/impsdc/kubi-front:latest
            imagePullPolicy: Always
            ports:
            - containerPort: 80
          imagePullSecrets:
          - name: ghcr-credentials
---
apiVersion: v1
kind: Service
metadata:
  name: front-service
spec:
  selector:
    app: front
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
