dashboard-ingress.yaml
# apiVersion: cert-manager.io/v1
# kind: Issuer
# metadata:
#   name: letsencrypt-prod
# spec:
#   acme:
#     # The ACME server URL
#     server: https://acme-v02.api.letsencrypt.org/directory
#     # Email address used for ACME registration
#     email: youremail@example.com
#     # Name of a secret used to store the ACME account private key
#     privateKeySecretRef:
#       name:
#         letsencrypt-prod
#         # Enable the HTTP-01 challenge provider
#     solvers:
#       - http01:
#           ingress:
#             class: nginx
# ---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   cert-manager.io/issuer: letsencrypt-prod
  #   kubernetes.io/ingress.class: public
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard-ingress
  namespace: kubernetes-dashboard
spec:
  rules:
    - host: dashboard.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
  # tls:
  #   - hosts:
  #       - dashboard.com
  #     secretName: dashboard-ingress-cert
